# FeynTune

./: .gitignore  .gitmodules  Dockerfile.base  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
SQLlama/: Makefile  cache_requirements.txt  dockerfile  pyproject.toml
SQLlama/src/: main.py  models.py
dockerfiles/: Dockerfile
inference/: Dockerfile  pyproject.toml
notebooks/: test_env.ipynb
train/: Dockerfile  Makefile  README.md  pyproject-core.toml  pyproject.toml  requirements.txt
train/feyntune/: cache_models.py  data_loader.py  main.py  model_paths.py
train/src/: main.py
