[tool.poetry]
name = "feyntune"
version = "0.1.0"
description = ""
authors = ["lacico <lacicocodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.32.0"
datasets = "^2.14.4"
peft = "^0.5.0"
accelerate = "^0.22.0"
bitsandbytes = "^0.41.1"
trl = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
